Code for consent controller
